--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import { ClientRouter } from "astro:transitions";
     <title>Astro Basics</title>
     <ClientRouter />
   </head>
-  <body class="bg-[#D8C1F6] p-[40px]">
+  <body class="bg-[#D8C1F6] p-3 md:p-6 lg:p-9">
     <slot />
   </body>
 </html>
