--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
-import Button from "../components/Button.astro";
 import { Image } from "astro:assets";
 import me from "../assets/rafael-meza.jpg";
 ---
@@ -9,20 +8,28 @@ import me from "../assets/rafael-meza.jpg";
 <Layout>
   <div
     transition:name="contact"
-    class="max-w-[1250px] bg-[#F9F9F9] mx-auto h-full rounded-[62px] flex justify-center items-center relative"
+    class="max-w-[1250px] px-4 py-16 bg-[#F9F9F9] mx-auto min-h-full rounded-[62px] flex justify-center items-center relative"
   >
-    <Button href="/" classes="top-[30px] right-[30px]">
-      <Icon name="material-symbols-light:arrow-back-rounded" size="32" />
-    </Button>
+    <a
+      href="/"
+      class="absolute flex items-center justify-center rounded-full w-[52px] h-[52px] top-[30px] text-[#FCCF5A] bg-[#704EE7] right-[30px]"
+    >
+      <Icon name="material-symbols-light:arrow-back-rounded" size="52" />
+    </a>
     <div>
-      <div class="mb-16">
+      <div class="mb-6">
         <div class="flex items-center space-x-5 mb-6">
           <Icon
             name="material-symbols-light:award-star-rounded"
             size="96"
             class="text-[#FCCF5A]"
           />
-          <h1 class="text-[#FCCF5A] text-[80px] font-nixie-one">RAFAEL MEZA</h1>
+          <h1
+            class="text-[#FCCF5A] text-[80px] font-nixie-one"
+            style="font-size:clamp(18px, 4vw + 1rem, 80px)"
+          >
+            RAFAEL MEZA
+          </h1>
         </div>
         <a
           href=""
@@ -35,25 +42,15 @@ import me from "../assets/rafael-meza.jpg";
           />
         </a>
       </div>
-      <div class="flex items-center space-x-4">
+      <div class="flex items-center space-y-4 space-x-4 flex-wrap justify-end">
+        <p class="mb-1 text-sm">
+          rhmcord@gmail.com <br />
+          PHONE: +51 - 997258592 <br />
+          GITHUB: raffo1234 <br />
+          LINKEDIN: Rafael Meza
+        </p>
         <div
-          class="h-[200px] rounded-[30px] text-white bg-[#704EE7] flex items-center justify-center w-1/3"
-        >
-          <div class="font-manrope text-white">
-            <p class="mb-1">rhmcord@gmail.com</p>
-            <p>PHONE: +51 - 997258592</p>
-          </div>
-        </div>
-        <div
-          class="h-[200px] flex rounded-[30px] w-1/3 bg-[#FCCF5A] items-center justify-center"
-        >
-          <div class="font-manrope">
-            <p>GITHUB: raffo1234</p>
-            <p>LINKEDIN: Rafael Meza</p>
-          </div>
-        </div>
-        <div
-          class="h-[200px] rounded-[30px] relative w-1/3 items-center justify-between overflow-hidden"
+          class="h-[200px] rounded-[30px] relative w-[200px] items-center justify-between overflow-hidden"
         >
           <Image
             src={me}
