--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,16 +28,18 @@ import Layout from "../layouts/Layout.astro";
           RAFAEL MEZA
         </h1>
       </div>
-      <a
-        href=""
-        class="bg-[#FCCF5A] place-self-end px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
-        ><span> Download Resume </span>
-        <Icon
-          name="material-symbols-light:download-rounded"
-          size="48"
-          class="text-white"
-        />
-      </a>
+      <div class="flex justify-end">
+        <a
+          href=""
+          class="bg-[#FCCF5A] px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
+          ><span> Download Resume </span>
+          <Icon
+            name="material-symbols-light:download-rounded"
+            size="48"
+            class="text-white"
+          />
+        </a>
+      </div>
     </div>
   </div>
 </Layout>
