--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,8 +30,12 @@ import Layout from "../layouts/Layout.astro";
       </div>
       <div class="flex justify-end">
         <a
-          href=""
+          download
+          title="Download Rafael Meza Resume | PDF"
+          href="/pdfs/Rafael-Meza-Resume.pdf"
           class="bg-[#FCCF5A] px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
+          target="_blank"
+          rel="noreferrer"
           ><span> Download Resume </span>
           <Icon
             name="material-symbols-light:download-rounded"
