feat: aling Download button

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
       <Icon name="material-symbols-light:arrow-back-rounded" size="62" />
     </a>
     <div>
-      <div class="flex items-center space-x-5 mb-6">
+      <div class="flex items-center mb-6 space-x-5">
         <Icon
           name="material-symbols-light:award-star-rounded"
           size="96"
