--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -18,7 +18,7 @@ import me from "../assets/rafael-meza.jpg";
     </a>
     <div>
       <div class="mb-6">
-        <div class="flex items-center space-x-5 mb-6">
+        <div class="flex items-center mb-6 space-x-5">
           <Icon
             name="material-symbols-light:award-star-rounded"
             size="96"
@@ -31,18 +31,24 @@ import me from "../assets/rafael-meza.jpg";
             RAFAEL MEZA
           </h1>
         </div>
-        <a
-          href=""
-          class="bg-[#FCCF5A] place-self-end px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
-          ><span> Download Resume </span>
-          <Icon
-            name="material-symbols-light:download-rounded"
-            size="48"
-            class="text-white"
-          />
-        </a>
+        <div class="flex justify-end">
+          <a
+            download
+            title="Download Rafael Meza Resume | PDF"
+            href="/pdfs/Rafael-Meza-Resume.pdf"
+            class="bg-[#FCCF5A] place-self-end px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
+            target="_blank"
+            rel="noreferrer"
+            ><span> Download Resume </span>
+            <Icon
+              name="material-symbols-light:download-rounded"
+              size="48"
+              class="text-white"
+            />
+          </a>
+        </div>
       </div>
-      <div class="flex items-center space-y-4 space-x-4 flex-wrap justify-end">
+      <div class="flex flex-wrap items-center justify-end space-x-4 space-y-4">
         <p class="mb-1 text-sm">
           rhmcord@gmail.com <br />
           PHONE: +51 - 997258592 <br />
@@ -54,7 +60,7 @@ import me from "../assets/rafael-meza.jpg";
         >
           <Image
             src={me}
-            class="w-full object-cover absolute object-top h-full"
+            class="absolute object-cover object-top w-full h-full"
             alt="Rafael Meza"
           />
         </div>
