feat: add social links

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -49,11 +49,36 @@ import me from "../assets/rafael-meza.jpg";
         </div>
       </div>
       <div class="flex flex-wrap items-center justify-end space-x-4 space-y-4">
-        <p class="mb-1 text-sm">
-          rhmcord@gmail.com <br />
-          PHONE: +51 - 997258592 <br />
-          GITHUB: raffo1234 <br />
-          LINKEDIN: Rafael Meza
+        <p class="mb-1">
+          <a
+            href="mailto:rhmcord@gmail.com"
+            class="border-b-2 border-b-[#FCCF5A] font-manrope"
+            target="_blank"
+            title="Rafael Meza Email">rhmcord@gmail.com</a
+          >
+          <br />
+          PHONE: <a
+            href="tel:51997258592"
+            class="border-b-2 border-b-[#FCCF5A] font-manrope"
+          >
+            +51 - 997258592</a
+          >
+          <br />
+          GITHUB:
+          <a
+            class="border-b-2 border-b-[#FCCF5A] font-manrope"
+            href="https://github.com/raffo1234"
+            target="_blank"
+            title="Rafael Meza Github">raffo1234</a
+          >
+          <br />
+          LINKEDIN:
+          <a
+            class="border-b-2 border-b-[#FCCF5A] font-manrope"
+            href="https://www.linkedin.com/in/rafael-meza"
+            target="_blank"
+            title="Rafael Meza Linkedin">Rafael Meza</a
+          >
         </p>
         <div
           class="h-[200px] rounded-[30px] relative w-[200px] items-center justify-between overflow-hidden"
