--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,6 +1,8 @@
 ---
 import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
+import { Image } from "astro:assets";
+import tiger from "../assets/portfolio/tiger.png";
 ---
 
 <Layout>
@@ -18,5 +20,26 @@ import Layout from "../layouts/Layout.astro";
         class="text-[#FCCF5A]"
       />
     </a>
+    <div class="space-x-5 flex items-center w-full md:p-[40px] lg:p-[80px]">
+      <div
+        class="flex justify-end rounded-[30px] flex-1 bg-white w-[40%] h-[330px] p-10"
+      >
+        <ul class="text-right font-raleway">
+          <li>Frontend Development</li>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Javascript</li>
+          <li>GSAP</li>
+          <li>Jquery</li>
+        </ul>
+      </div>
+      <div class="rounded-[30px] flex-1 w-[40%] h-[330px] relative">
+        <Image
+          src={tiger}
+          class="object-contain w-full h-full"
+          alt="Rafael Meza | Portfolio"
+        />
+      </div>
+    </div>
   </div>
 </Layout>
