feat: add images to portfolio

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,11 @@ import Layout from "../layouts/Layout.astro";
       href="/"
       class="w-[62px] h-[62px] flex items-center justify-center text-white top-[30px] right-[30px] bg-[#FCCF5A] absolute rounded-full"
     >
-      <Icon name="material-symbols-light:arrow-back-rounded" size="62" />
+      <Icon
+        name="material-symbols-light:arrow-back-rounded"
+        size="62"
+        class="-rotate-45"
+      />
     </a>
     <div>
       <div class="flex items-center mb-6 space-x-5">
