--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,11 @@ import me from "../assets/rafael-meza.jpg";
       href="/"
       class="absolute flex items-center justify-center rounded-full w-[52px] h-[52px] top-[30px] text-[#FCCF5A] bg-[#704EE7] right-[30px]"
     >
-      <Icon name="material-symbols-light:arrow-back-rounded" size="52" />
+      <Icon
+        name="material-symbols-light:arrow-back-rounded"
+        size="52"
+        class="-rotate-45"
+      />
     </a>
     <div>
       <div class="mb-6">
