feat: remove animation between pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="lg:flex lg:space-x-5 lg:mb-5 lg:h-[60%]">
       <a
         transition:name="about"
-        href="/about"
+        href="/about-me"
         class="lg:w-[60%] h-[330px] w-full bg-[#704EE7] rounded-[30px] flex justify-center items-center"
       >
         <div class="flex items-center space-x-5 p-4">
@@ -29,7 +29,6 @@ import Layout from "../layouts/Layout.astro";
       </a>
       <a
         href="/projects"
-        transition:name="projects"
         class="lg:w-[40%] w-full h-[330px] bg-[#FCCF5A] rounded-[30px] relative overflow-hidden p-10"
       >
         <Icon
