--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,8 +12,8 @@ const images = [tiger, renta2014, travelmax, yachay];
 
 <Layout>
   <div
-    transition:name="projects"
-    class="max-w-[1250px] bg-[#FCCF5A] mx-auto h-full rounded-[62px] flex justify-center items-center relative"
+    class="max-w-[1250px] bg-[#FCCF5A] mx-auto h-full rounded-[62px] flex
+    justify-center items-center relative"
   >
     <a
       href="/"
@@ -57,5 +57,5 @@ const images = [tiger, renta2014, travelmax, yachay];
     currentSlide = (currentSlide + 1) % slides.length;
   }
 
-  setInterval(showNextSlide, 3000);
+  setInterval(showNextSlide, 1500);
 </script>
