--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,29 +2,19 @@
 import "@fontsource/Raleway";
 import "@fontsource/lobster";
 import "@fontsource/nixie-one";
-import { ClientRouter } from "astro:transitions";
+// import { ClientRouter } from "astro:transitions";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
-    <ClientRouter />
+    <title>Rafael Meza | Portfolio</title>
   </head>
-  <body class="bg-[#D8C1F6] p-3 md:p-6 lg:p-9">
+  <body id="app" class="bg-[#D8C1F6] p-3 md:p-6 lg:p-9 h-full">
     <slot />
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
