feat: fix block elements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
       </a>
       <a
         href="/projects"
-        class="lg:w-[40%] w-full h-[330px] bg-[#FCCF5A] rounded-[30px] relative overflow-hidden p-10"
+        class="lg:w-[40%] block w-full h-[330px] bg-[#FCCF5A] rounded-[30px] relative overflow-hidden p-10"
       >
         <Icon
           name="material-symbols-light:award-star-rounded"
@@ -48,7 +48,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="lg:flex lg:space-x-5 lg:h-[40%]">
       <a
         href="/contact"
-        class="lg:w-[30%] bg-[#DFC8FD] h-[330px] rounded-[36px] overflow-hidden relative"
+        class="block lg:w-[30%] bg-[#DFC8FD] h-[330px] rounded-[36px] overflow-hidden relative"
       >
         <Icon
           name="material-symbols-light:cloud"
