feat: improve the contact page

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -26,13 +26,13 @@ import Layout from "../layouts/Layout.astro";
           class="text-[#FCCF5A]"
         />
         <h1
-          class="text-[#FCCF5A] text-[80px] font-nixie-one"
-          style="font-size:clamp(18px, 4vw + 1rem, 80px)"
+          class="text-[#FCCF5A] font-nixie-one"
+          style="font-size:clamp(18px, 4vw + 1rem, 60px)"
         >
           RAFAEL MEZA
         </h1>
       </div>
-      <div class="flex justify-end">
+      <!-- <div class="flex justify-end">
         <a
           download
           title="Download Rafael Meza Resume | PDF"
@@ -47,7 +47,7 @@ import Layout from "../layouts/Layout.astro";
             class="text-white"
           />
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </Layout>
