--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -27,6 +27,7 @@ const images = [
 
 <Layout>
   <div
+    transition:name="projects"
     class="max-w-[1250px] bg-[#FCCF5A] mx-auto h-full rounded-[62px] flex
     justify-center items-center relative"
   >
