feat: add social buttons

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -35,59 +35,12 @@ import me from "../assets/rafael-meza.jpg";
             RAFAEL MEZA
           </h1>
         </div>
-        <p class="mb-4">
+        <p>
           If you're looking for a professional to turn designs into clean and
           responsive code, drop me a message!
         </p>
-        <div class="flex justify-end">
-          <!-- <a
-            download
-            title="Download Rafael Meza Resume | PDF"
-            href="/pdfs/Rafael-Meza-Resume.pdf"
-            class="bg-[#FCCF5A] place-self-end px-8 font-raleway py-2 w-fit flex items-center space-x-4 rounded-[40px]"
-            target="_blank"
-            rel="noreferrer"
-            ><span> Download Resume </span>
-            <Icon
-              name="material-symbols-light:download-rounded"
-              size="48"
-              class="text-white"
-            />
-          </a> -->
-        </div>
+        <div class="flex justify-end"></div>
       </div>
-
-      <!-- <p class="mb-1">
-          <a
-            href="mailto:rhmcord@gmail.com"
-            class="border-b-2 border-b-[#FCCF5A] font-manrope"
-            target="_blank"
-            title="Rafael Meza Email">rhmcord@gmail.com</a
-          >
-          <br />
-          PHONE: <a
-            href="tel:51997258592"
-            class="border-b-2 border-b-[#FCCF5A] font-manrope"
-          >
-            +51 - 997258592</a
-          >
-          <br />
-          GITHUB:
-          <a
-            class="border-b-2 border-b-[#FCCF5A] font-manrope"
-            href="https://github.com/raffo1234"
-            target="_blank"
-            title="Rafael Meza Github">raffo1234</a
-          >
-          <br />
-          LINKEDIN:
-          <a
-            class="border-b-2 border-b-[#FCCF5A] font-manrope"
-            href="https://www.linkedin.com/in/rafael-meza"
-            target="_blank"
-            title="Rafael Meza Linkedin">Rafael Meza</a
-          > -->
-
       <div
         class="grid gap-4 w-full"
         style={{
@@ -95,32 +48,57 @@ import me from "../assets/rafael-meza.jpg";
         }}
       >
         <a
-          class="aspect-square rounded-[30px] relative w-full items-center justify-between overflow-hidden"
-        >
-          <Image
-            src={me}
-            class="absolute object-cover object-top w-full h-full"
-            alt="Rafael Meza"
-          />
-        </a>
-        <a
-          class="aspect-square rounded-[30px] relative w-full items-center justify-between overflow-hidden"
-        >
-          <Image
-            src={me}
-            class="absolute object-cover object-top w-full h-full"
-            alt="Rafael Meza"
-          />
-        </a>
-        <a
-          href=""
+          href="mailto:rafaelmezac@gmail.com"
           target="_blank"
-          class="aspect-square rounded-[30px] relative w-full items-center justify-between overflow-hidden"
+          rel="noreferrer"
+          title="Email | Rafael Meza | rafaelmezac@gmail.com"
+          class="overflow-hidden aspect-square flex items-center justify-center rounded-[30px] bg-[#704EE7] relative w-full"
         >
-          <Image
-            src={me}
-            class="absolute object-cover object-top w-full h-full"
-            alt="Rafael Meza"
+          <Icon
+            name="material-symbols-light:mark-email-read-outline"
+            size="100"
+            class="text-[#FCCF5A] absolute left-0 bottom-0"
+          />
+          <Icon
+            name="material-symbols-light:arrow-back-rounded"
+            size="48"
+            class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
+          />
+        </a>
+        <a
+          href="https://github.com/raffo1234"
+          target="_blank"
+          rel="noreferrer"
+          title="Github | Rafael Meza | raffo1234"
+          class="aspect-square rounded-[30px] bg-[#704EE7] relative w-full items-center justify-between overflow-hidden"
+        >
+          <Icon
+            name="material-symbols-light:code-blocks-outline"
+            size="100"
+            class="text-[#FCCF5A] absolute left-0 bottom-0"
+          />
+          <Icon
+            name="material-symbols-light:arrow-back-rounded"
+            size="48"
+            class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
+          />
+        </a>
+        <a
+          href="https://wa.me/+51997258592"
+          title="Whatsapp | Rafael Meza | +51 997258592"
+          target="_blank"
+          rel="noreferrer"
+          class="aspect-square rounded-[30px] bg-[#704EE7] relative w-full items-center justify-between overflow-hidden"
+        >
+          <Icon
+            name="material-symbols-light:mark-unread-chat-alt-outline"
+            size="100"
+            class="text-[#FCCF5A] absolute left-0 bottom-0"
+          />
+          <Icon
+            name="material-symbols-light:arrow-back-rounded"
+            size="48"
+            class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
           />
         </a>
         <div
@@ -129,7 +107,7 @@ import me from "../assets/rafael-meza.jpg";
           <Image
             src={me}
             class="absolute object-cover object-top w-full h-full"
-            alt="Rafael Meza"
+            alt="Rafael Meza "
           />
         </div>
       </div>
