fix: import font

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/Raleway";
+import "@fontsource/raleway";
 import "@fontsource/lobster";
 import "@fontsource/nixie-one";
 import { ClientRouter } from "astro:transitions";
