feat: add meta description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,11 @@ import { ClientRouter } from "astro:transitions";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Rafael Meza | Portfolio</title>
+    <meta
+      name="description"
+      content="Rafael Meza - Web Developer specializing in ReactJS. Building modern, scalable, and efficient web applications. Turn your ideas into reality with custom tech solutions. Expert in front-end development and JavaScript frameworks."
+    />
+    <title>Rafael Meza | Web Developer</title>
     <ClientRouter />
   </head>
   <body id="app" class="bg-[#D8C1F6] p-3 md:p-6 lg:p-9 h-full">
