--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,11 +76,25 @@ import Layout from "../layouts/Layout.astro";
           class="text-[#FFE5A2] absolute -right-[80px]"
         />
         <article class="absolute left-0 right-0 bottom-0 p-10">
-          <h2 class="text-2xl mb-3 font-lobster">Hobbies</h2>
-          <p>
-            Passionate about sports like soccer, running, and biking. I also
-            enjoy designing and crafting furniture using SketchUp
+          <h2 class="text-2xl mb-3 font-lobster">Hobbies & Interests</h2>
+
+          <p class="text-sm mb-3">
+            When I'm not coding, I love exploring my creative and active side!
+            Here's what keeps me inspired:
           </p>
+          <ul class="text-sm mb-3">
+            <li>
+              <b>Digital Design:</b> Creating visuals in Photoshop and Illustrator.
+              3D
+            </li>
+            <li>
+              <b>Modeling:</b>Bringing ideas to life with SketchUp and AutoCAD.
+            </li>
+            <li><b>Sports:</b> Staying active with soccer and running.</li>
+            <li>
+              <b>Cooking:</b> Experimenting with new recipes and flavors in the kitchen.
+            </li>
+          </ul>
         </article>
       </div>
     </div>
