feat: fix spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -85,14 +85,15 @@ import Layout from "../layouts/Layout.astro";
           <ul class="text-sm mb-3">
             <li>
               <b>Digital Design:</b> Creating visuals in Photoshop and Illustrator.
-              3D
             </li>
             <li>
-              <b>Modeling:</b>Bringing ideas to life with SketchUp and AutoCAD.
+              <b>3D Modeling: </b>Bringing ideas to life with SketchUp and
+              AutoCAD.
             </li>
-            <li><b>Sports:</b> Staying active with soccer and running.</li>
+            <li><b>Sports: </b> Staying active with soccer and running.</li>
             <li>
-              <b>Cooking:</b> Experimenting with new recipes and flavors in the kitchen.
+              <b>Cooking: </b> Experimenting with new recipes and flavors in the
+              kitchen.
             </li>
           </ul>
         </article>
