feat: add the hobbies page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,9 @@ import Layout from "../layouts/Layout.astro";
           </p>
         </article>
       </a>
-      <div
+      <a
+        href="/hobbies-interests"
+        transition:name="hobbies-interests"
         class="lg:w-[70%] h-[330px] bg-[#F3F3F3] rounded-[30px] overflow-hidden relative"
       >
         <Icon
@@ -97,7 +99,7 @@ import Layout from "../layouts/Layout.astro";
             </li>
           </ul>
         </article>
-      </div>
+      </a>
     </div>
   </main>
 </Layout>
