feat: update hobbies images

--- a/src/pages/hobbies-interests.astro
+++ b/src/pages/hobbies-interests.astro
@@ -2,10 +2,27 @@
 import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import sketchup from "../assets/hobbies/sketchup.png";
-import autocad from "../assets/hobbies/autocad.png";
+import tiger from "../assets/portfolio/tiger.png";
+import renta2014 from "../assets/portfolio/renta-2014.png";
+import travelmax from "../assets/portfolio/travelmax.png";
+import yachay from "../assets/portfolio/yachay.png";
+import grupon from "../assets/portfolio/grupon.png";
+import laive from "../assets/portfolio/laive.png";
+import yachayDashboard from "../assets/portfolio/dashboard-yachay.png";
+import cancino from "../assets/portfolio/cancino.png";
+import goldenpalace from "../assets/portfolio/goldenpalace.png";
 
-const images = [sketchup, autocad];
+const images = [
+  cancino,
+  tiger,
+  renta2014,
+  travelmax,
+  yachay,
+  grupon,
+  laive,
+  yachayDashboard,
+  goldenpalace,
+];
 ---
 
 <Layout>
